--- a/main.bib
+++ b/main.bib
@@ -2,3 +2,21 @@
 	Author = {Juncheng Gu, Youngmoon Lee, Yiwen Zhang, Mosharaf Chowdhury, and Kang Shin},
 	Title = {Efficient Memory Disaggregation with Infiniswap},
 	Year = {2001}}
+
+@inproceedings{gu2017efficient,
+  title={Efficient Memory Disaggregation with Infiniswap.},
+  author={Gu, Juncheng and Lee, Youngmoon and Zhang, Yiwen and Chowdhury, Mosharaf and Shin, Kang G},
+  booktitle={NSDI},
+  pages={649--667},
+  year={2017}
+}
+
+@inproceedings{zellweger2014decoupling,
+  title={Decoupling Cores, Kernels, and Operating Systems.},
+  author={Zellweger, Gerd and Gerber, Simon and Kourtis, Kornilios and Roscoe, Timothy},
+  booktitle={OSDI},
+  volume={14},
+  pages={17--31},
+  year={2014}
+}
+
