--- a/main.bib
+++ b/main.bib
@@ -2,3 +2,18 @@
 	Author = {Juncheng Gu, Youngmoon Lee, Yiwen Zhang, Mosharaf Chowdhury, and Kang Shin},
 	Title = {Efficient Memory Disaggregation with Infiniswap},
 	Year = {2001}}
+	
+@inproceedings{klimovic2016flash,
+  title={Flash storage disaggregation},
+  author={Klimovic, Ana and Kozyrakis, Christos and Thereska, Eno and John, Binu and Kumar, Sanjeev},
+  booktitle={Proceedings of the Eleventh European Conference on Computer Systems},
+  pages={29},
+  year={2016},
+  organization={ACM}
+}
+
+@misc{leverich2014mutilate,
+  title={Mutilate: high-performance memcached load generator},
+  author={Leverich, Jacob},
+  year={2014}
+}
