--- a/main.tex
+++ b/main.tex
@@ -157,7 +157,7 @@ headsepline, % Uncomment to get a line under the header
 
 %\include{Chapters/Chapter1}
 \include{Chapters/Chapter2} 
-%\include{Chapters/Chapter3}
+\include{Chapters/Chapter3}
 %\include{Chapters/Chapter4} 
 %\include{Chapters/Chapter5} 
 
