legoos part update

--- a/main.bib
+++ b/main.bib
@@ -73,3 +73,10 @@
   pages={17--31},
   year={2014}
 }
+
+@article{tanenbaum1991amoeba,
+  title={The Amoeba distributed operating system-a status report},
+  author={Tanenbaum, Andrew S and Kaashoek, M Frans and Renesse, R van and Bal, H},
+  year={1991}
+}
+
