--- a/main.bib
+++ b/main.bib
@@ -65,85 +65,27 @@
   year={2018}
 }
 
-@inproceedings{wei2015fast,
-  title={Fast in-memory transaction processing using RDMA and HTM},
-  author={Wei, Xingda and Shi, Jiaxin and Chen, Yanzhe and Chen, Rong and Chen, Haibo},
-  booktitle={Proceedings of the 25th Symposium on Operating Systems Principles},
-  pages={87--104},
-  year={2015},
-  organization={ACM}
-}
-
-@inproceedings{shi2016fast,
-  title={Fast and Concurrent RDF Queries with RDMA-Based Distributed Graph Exploration.},
-  author={Shi, Jiaxin and Yao, Youyang and Chen, Rong and Chen, Haibo and Li, Feifei},
+@inproceedings{zellweger2014decoupling,
+  title={Decoupling Cores, Kernels, and Operating Systems.},
+  author={Zellweger, Gerd and Gerber, Simon and Kourtis, Kornilios and Roscoe, Timothy},
   booktitle={OSDI},
-  volume={16},
-  pages={317--332},
-  year={2016}
-}
-
-@inproceedings{chen2008transparent,
-  title={A transparent remote paging model for virtual machines},
-  author={Chen, Haogang and Luo, Yingwei and Wang, Xiaolin and Zhang, Binbin and Sun, Yifeng and Wang, Zhenlin},
-  booktitle={International Workshop on Virtualization Technology},
-  year={2008}
-}
-
-@inproceedings{newhall2003nswap,
-  title={Nswap: A network swapping module for linux clusters},
-  author={Newhall, Tia and Finney, Sean and Ganchev, Kuzman and Spiegel, Michael},
-  booktitle={European Conference on Parallel Processing},
-  pages={1160--1169},
-  year={2003},
-  organization={Springer}
-}
-
-@article{flouris1999network,
-  title={The network RamDisk: Using remote memory on heterogeneous NOWs},
-  author={Flouris, Michail D and Markatos, Evangelos P},
-  journal={Cluster Computing},
-  volume={2},
-  number={4},
-  pages={281--293},
-  year={1999},
-  publisher={Springer}
-}
-
-@book{carter1991implementation,
-  title={Implementation and performance of Munin},
-  author={Carter, John B and Bennett, John K and Zwaenepoel, Willy},
-  volume={25},
-  number={5},
-  year={1991},
-  publisher={ACM}
-}
-
-@article{li1989memory,
-  title={Memory coherence in shared virtual memory systems},
-  author={Li, Kai and Hudak, Paul},
-  journal={ACM Transactions on Computer Systems (TOCS)},
-  volume={7},
-  number={4},
-  pages={321--359},
-  year={1989},
-  publisher={ACM}
-}
-
-@article{nitzberg1991distributed,
-  title={Distributed shared memory: A survey of issues and algorithms},
-  author={Nitzberg, Bill and Lo, Virginia},
-  journal={Computer},
-  volume={24},
-  number={8},
-  pages={52--60},
-  year={1991},
-  publisher={IEEE}
+  volume={14},
+  pages={17--31},
+  year={2014}
 }
 
 @article{tanenbaum1991amoeba,
   title={The Amoeba distributed operating system-a status report},
   author={Tanenbaum, Andrew S and Kaashoek, M Frans and Renesse, R van and Bal, H},
   year={1991}
+}
+
+@inproceedings{nightingale2009helios,
+  title={Helios: heterogeneous multiprocessing with satellite kernels},
+  author={Nightingale, Edmund B and Hodson, Orion and McIlroy, Ross and Hawblitzel, Chris and Hunt, Galen},
+  booktitle={Proceedings of the ACM SIGOPS 22nd symposium on Operating systems principles},
+  pages={221--234},
+  year={2009},
+  organization={ACM}
 }
 
