--- a/main.bib
+++ b/main.bib
@@ -12,6 +12,7 @@
   author={Leverich, Jacob},
   year={2014}
 }
+
 @misc{amazon2010amazon,
   title={Amazon Elastic Block Store},
   author={Amazon, EBS},
@@ -89,3 +90,27 @@
   organization={ACM}
 }
 
+@misc{intel2018corei9,
+  howpublished = {\url{https://www3.intel.com/content/dam/www/public/us/en/documents/product-briefs/9th-gen-core-desktop-brief.pdf}},
+  title={9th Generation Intel Core Desktop Processors},
+  author={Intel},
+  year={2018}
+}
+
+@misc{wikipedia2019nvm,
+  howpublished = {\url{https://en.wikipedia.org/wiki/Non-volatile_memory}},
+  title={Non-volatile memory},
+  author={Wikipedia},
+  year={2019}
+}
+
+@article{zhang2010cloud,
+  title={Cloud computing: state-of-the-art and research challenges},
+  author={Zhang, Qi and Cheng, Lu and Boutaba, Raouf},
+  journal={Journal of internet services and applications},
+  volume={1},
+  number={1},
+  pages={7--18},
+  year={2010},
+  publisher={Springer}
+}
