--- a/main.bib
+++ b/main.bib
@@ -114,3 +114,109 @@
   year={2010},
   publisher={Springer}
 }
+
+@inproceedings{wei2015fast,
+  title={Fast in-memory transaction processing using RDMA and HTM},
+  author={Wei, Xingda and Shi, Jiaxin and Chen, Yanzhe and Chen, Rong and Chen, Haibo},
+  booktitle={Proceedings of the 25th Symposium on Operating Systems Principles},
+  pages={87--104},
+  year={2015},
+  organization={ACM}
+}
+
+@inproceedings{shi2016fast,
+  title={Fast and Concurrent RDF Queries with RDMA-Based Distributed Graph Exploration.},
+  author={Shi, Jiaxin and Yao, Youyang and Chen, Rong and Chen, Haibo and Li, Feifei},
+  booktitle={OSDI},
+  volume={16},
+  pages={317--332},
+  year={2016}
+}
+
+@inproceedings{chen2008transparent,
+  title={A transparent remote paging model for virtual machines},
+  author={Chen, Haogang and Luo, Yingwei and Wang, Xiaolin and Zhang, Binbin and Sun, Yifeng and Wang, Zhenlin},
+  booktitle={International Workshop on Virtualization Technology},
+  year={2008}
+}
+
+@inproceedings{newhall2003nswap,
+  title={Nswap: A network swapping module for linux clusters},
+  author={Newhall, Tia and Finney, Sean and Ganchev, Kuzman and Spiegel, Michael},
+  booktitle={European Conference on Parallel Processing},
+  pages={1160--1169},
+  year={2003},
+  organization={Springer}
+}
+
+@article{flouris1999network,
+  title={The network RamDisk: Using remote memory on heterogeneous NOWs},
+  author={Flouris, Michail D and Markatos, Evangelos P},
+  journal={Cluster Computing},
+  volume={2},
+  number={4},
+  pages={281--293},
+  year={1999},
+  publisher={Springer}
+}
+
+@book{carter1991implementation,
+  title={Implementation and performance of Munin},
+  author={Carter, John B and Bennett, John K and Zwaenepoel, Willy},
+  volume={25},
+  number={5},
+  year={1991},
+  publisher={ACM}
+}
+
+@article{li1989memory,
+  title={Memory coherence in shared virtual memory systems},
+  author={Li, Kai and Hudak, Paul},
+  journal={ACM Transactions on Computer Systems (TOCS)},
+  volume={7},
+  number={4},
+  pages={321--359},
+  year={1989},
+  publisher={ACM}
+}
+
+@article{nitzberg1991distributed,
+  title={Distributed shared memory: A survey of issues and algorithms},
+  author={Nitzberg, Bill and Lo, Virginia},
+  journal={Computer},
+  volume={24},
+  number={8},
+  pages={52--60},
+  year={1991},
+  publisher={IEEE}
+}
+
+@inproceedings{gfs,
+title	= {The Google File System},
+author	= {Sanjay Ghemawat and Howard Gobioff and Shun-Tak Leung},
+year	= {2003},
+booktitle	= {Proceedings of the 19th ACM Symposium on Operating  Systems Principles},
+pages	= {20--43},
+address	= {Bolton Landing, NY}
+}
+
+@inproceedings{shvachko2010hadoop,
+  title={The hadoop distributed file system},
+  author={Shvachko, Konstantin and Kuang, Hairong and Radia, Sanjay and Chansler, Robert},
+  booktitle={Mass storage systems and technologies (MSST), 2010 IEEE 26th symposium on},
+  pages={1--10},
+  year={2010},
+  organization={Ieee}
+}
+
+@misc{nimbusdata,
+  howpublished = {\url{https://nimbusdata.com/press/nimbus-data-launches-worlds-largest-solid-state-drive-100-terabytes-power-data-driven-innovation/}},
+  title={Nimbus Data Launches the World’s Largest Solid State Drive – 100 Terabytes – to Power Data-driven Innovation},
+  author={Nimbus Data},
+}
+
+@misc{optane,
+  howpublished = {\url{https://www.intel.cn/content/www/cn/zh/products/memory-storage/solid-state-drives/gaming-enthusiast-ssds/optane-905p-series/905p-480gb-2-5-inch-20nm.html}},
+  title={INTEL OPTANE SSD 905P SERIES},
+  author={Intel},
+}
